parcer.output
Rules never reduced

   29 MethodType: Type


State 46 conflicts: 1 shift/reduce
State 70 conflicts: 1 shift/reduce
State 151 conflicts: 1 shift/reduce


Grammar

    0 $accept: CompilationUnit $end

    1 CompilationUnit: Imports ClassDeclarations

    2 Imports: /* empty */
    3        | Import Imports

    4 Import: IMPORT IDENTIFIER SEMICOLON

    5 ClassDeclarations: /* empty */
    6                  | ClassDeclaration ClassDeclarations

    7 ClassDeclaration: CLASS CompoundName Extension SEMICOLON ClassBody
    8                 | PUBLIC CLASS CompoundName Extension SEMICOLON ClassBody

    9 Extension: /* empty */
   10          | EXTENDS IDENTIFIER

   11 ClassBody: LBRACE RBRACE
   12          | LBRACE ClassMembers RBRACE

   13 ClassMembers: ClassMember
   14             | ClassMembers ClassMember

   15 ClassMember: FieldDeclaration
   16            | MethodDeclaration

   17 FieldDeclaration: Visibility Staticness Type IDENTIFIER SEMICOLON

   18 Visibility: /* empty */
   19           | PRIVATE
   20           | PUBLIC

   21 Staticness: /* empty */
   22           | STATIC

   23 MethodDeclaration: Visibility Staticness MethodType IDENTIFIER Parameters Body

   24 Parameters: LPAREN RPAREN
   25           | LPAREN ParameterList RPAREN

   26 ParameterList: Parameter
   27              | ParameterList COMMA Parameter

   28 Parameter: Type IDENTIFIER

   29 MethodType: Type
   30           | VOID

   31 Body: LBRACE LocalDeclarations Statements RBRACE

   32 LocalDeclarations: LocalDeclaration
   33                  | LocalDeclarations LocalDeclaration

   34 LocalDeclaration: Type IDENTIFIER SEMICOLON

   35 Statements: Statement
   36           | Statements Statement

   37 Statement: Assignment
   38          | IfStatement
   39          | WhileStatement
   40          | ReturnStatement
   41          | CallStatement
   42          | PrintStatement
   43          | Block

   44 Assignment: LeftPart ASSIGN Expression SEMICOLON

   45 LeftPart: CompoundName
   46         | CompoundName LBRACKET Expression RBRACKET

   47 CompoundName: IDENTIFIER
   48             | CompoundName DOT IDENTIFIER

   49 IfStatement: IF LPAREN Relation RPAREN Statement
   50            | IF LPAREN Relation RPAREN Statement ELSE Statement

   51 WhileStatement: WHILE Relation LOOP Statement SEMICOLON

   52 ReturnStatement: RETURN SEMICOLON
   53                | RETURN Expression SEMICOLON

   54 CallStatement: CompoundName LPAREN RPAREN SEMICOLON
   55              | CompoundName LPAREN ArgumentList RPAREN SEMICOLON

   56 ArgumentList: Expression
   57             | ArgumentList COMMA Expression

   58 PrintStatement: PRINT Expression SEMICOLON

   59 Block: LBRACE RBRACE
   60      | LBRACE Statements RBRACE

   61 Relation: Expression
   62         | Expression RelationalOperator Expression

   63 RelationalOperator: LESS
   64                   | GREATER
   65                   | EQUAL
   66                   | NOT_EQUAL

   67 Expression: Term Terms
   68           | AddSign Term Terms

   69 AddSign: PLUS
   70        | MINUS

   71 Terms: /* empty */
   72      | AddSign Term Terms

   73 Term: Factor Factors

   74 Factors: /* empty */
   75        | MultSign Factor Factors

   76 MultSign: MULTIPLY
   77         | DIVIDE

   78 Factor: NUMBER
   79       | LeftPart
   80       | NULL
   81       | NEW NewType
   82       | NEW NewType LBRACKET Expression RBRACKET

   83 NewType: INT
   84        | REAL
   85        | IDENTIFIER

   86 Type: INT ArrayTail
   87     | REAL ArrayTail
   88     | IDENTIFIER ArrayTail

   89 ArrayTail: /* empty */
   90          | LBRACKET RBRACKET


Terminals, with rules where they appear

$end (0) 0
error (256)
IDENTIFIER (258) 4 10 17 23 28 34 47 48 85 88
NUMBER (259) 78
IMPORT (260) 4
CLASS (261) 7 8
EXTENDS (262) 10
PRIVATE (263) 19
PUBLIC (264) 8 20
STATIC (265) 22
VOID (266) 30
IF (267) 49 50
ELSE (268) 50
WHILE (269) 51
LOOP (270) 51
RETURN (271) 52 53
PRINT (272) 58
NULL (273) 80
NEW (274) 81 82
INT (275) 83 86
REAL (276) 84 87
LBRACE (277) 11 12 31 59 60
RBRACE (278) 11 12 31 59 60
LPAREN (279) 24 25 49 50 54 55
RPAREN (280) 24 25 49 50 54 55
LBRACKET (281) 46 82 90
RBRACKET (282) 46 82 90
COMMA (283) 27 57
DOT (284) 48
SEMICOLON (285) 4 7 8 17 34 44 51 52 53 54 55 58
ASSIGN (286) 44
LESS (287) 63
GREATER (288) 64
EQUAL (289) 65
NOT_EQUAL (290) 66
PLUS (291) 69
MINUS (292) 70
MULTIPLY (293) 76
DIVIDE (294) 77


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
CompilationUnit (41)
    on left: 1, on right: 0
Imports (42)
    on left: 2 3, on right: 1 3
Import (43)
    on left: 4, on right: 3
ClassDeclarations (44)
    on left: 5 6, on right: 1 6
ClassDeclaration (45)
    on left: 7 8, on right: 6
Extension (46)
    on left: 9 10, on right: 7 8
ClassBody (47)
    on left: 11 12, on right: 7 8
ClassMembers (48)
    on left: 13 14, on right: 12 14
ClassMember (49)
    on left: 15 16, on right: 13 14
FieldDeclaration (50)
    on left: 17, on right: 15
Visibility (51)
    on left: 18 19 20, on right: 17 23
Staticness (52)
    on left: 21 22, on right: 17 23
MethodDeclaration (53)
    on left: 23, on right: 16
Parameters (54)
    on left: 24 25, on right: 23
ParameterList (55)
    on left: 26 27, on right: 25 27
Parameter (56)
    on left: 28, on right: 26 27
MethodType (57)
    on left: 29 30, on right: 23
Body (58)
    on left: 31, on right: 23
LocalDeclarations (59)
    on left: 32 33, on right: 31 33
LocalDeclaration (60)
    on left: 34, on right: 32 33
Statements (61)
    on left: 35 36, on right: 31 36 60
Statement (62)
    on left: 37 38 39 40 41 42 43, on right: 35 36 49 50 51
Assignment (63)
    on left: 44, on right: 37
LeftPart (64)
    on left: 45 46, on right: 44 79
CompoundName (65)
    on left: 47 48, on right: 7 8 45 46 48 54 55
IfStatement (66)
    on left: 49 50, on right: 38
WhileStatement (67)
    on left: 51, on right: 39
ReturnStatement (68)
    on left: 52 53, on right: 40
CallStatement (69)
    on left: 54 55, on right: 41
ArgumentList (70)
    on left: 56 57, on right: 55 57
PrintStatement (71)
    on left: 58, on right: 42
Block (72)
    on left: 59 60, on right: 43
Relation (73)
    on left: 61 62, on right: 49 50 51
RelationalOperator (74)
    on left: 63 64 65 66, on right: 62
Expression (75)
    on left: 67 68, on right: 44 46 53 56 57 58 61 62 82
AddSign (76)
    on left: 69 70, on right: 68 72
Terms (77)
    on left: 71 72, on right: 67 68 72
Term (78)
    on left: 73, on right: 67 68 72
Factors (79)
    on left: 74 75, on right: 73 75
MultSign (80)
    on left: 76 77, on right: 75
Factor (81)
    on left: 78 79 80 81 82, on right: 73 75
NewType (82)
    on left: 83 84 85, on right: 81 82
Type (83)
    on left: 86 87 88, on right: 17 28 29 34
ArrayTail (84)
    on left: 89 90, on right: 86 87 88


state 0

    0 $accept: . CompilationUnit $end

    IMPORT  shift, and go to state 1

    $default  reduce using rule 2 (Imports)

    CompilationUnit  go to state 2
    Imports          go to state 3
    Import           go to state 4


state 1

    4 Import: IMPORT . IDENTIFIER SEMICOLON

    IDENTIFIER  shift, and go to state 5


state 2

    0 $accept: CompilationUnit . $end

    $end  shift, and go to state 6


state 3

    1 CompilationUnit: Imports . ClassDeclarations

    CLASS   shift, and go to state 7
    PUBLIC  shift, and go to state 8

    $default  reduce using rule 5 (ClassDeclarations)

    ClassDeclarations  go to state 9
    ClassDeclaration   go to state 10


state 4

    3 Imports: Import . Imports

    IMPORT  shift, and go to state 1

    $default  reduce using rule 2 (Imports)

    Imports  go to state 11
    Import   go to state 4


state 5

    4 Import: IMPORT IDENTIFIER . SEMICOLON

    SEMICOLON  shift, and go to state 12


state 6

    0 $accept: CompilationUnit $end .

    $default  accept


state 7

    7 ClassDeclaration: CLASS . CompoundName Extension SEMICOLON ClassBody

    IDENTIFIER  shift, and go to state 13

    CompoundName  go to state 14


state 8

    8 ClassDeclaration: PUBLIC . CLASS CompoundName Extension SEMICOLON ClassBody

    CLASS  shift, and go to state 15


state 9

    1 CompilationUnit: Imports ClassDeclarations .

    $default  reduce using rule 1 (CompilationUnit)


state 10

    6 ClassDeclarations: ClassDeclaration . ClassDeclarations

    CLASS   shift, and go to state 7
    PUBLIC  shift, and go to state 8

    $default  reduce using rule 5 (ClassDeclarations)

    ClassDeclarations  go to state 16
    ClassDeclaration   go to state 10


state 11

    3 Imports: Import Imports .

    $default  reduce using rule 3 (Imports)


state 12

    4 Import: IMPORT IDENTIFIER SEMICOLON .

    $default  reduce using rule 4 (Import)


state 13

   47 CompoundName: IDENTIFIER .

    $default  reduce using rule 47 (CompoundName)


state 14

    7 ClassDeclaration: CLASS CompoundName . Extension SEMICOLON ClassBody
   48 CompoundName: CompoundName . DOT IDENTIFIER

    EXTENDS  shift, and go to state 17
    DOT      shift, and go to state 18

    $default  reduce using rule 9 (Extension)

    Extension  go to state 19


state 15

    8 ClassDeclaration: PUBLIC CLASS . CompoundName Extension SEMICOLON ClassBody

    IDENTIFIER  shift, and go to state 13

    CompoundName  go to state 20


state 16

    6 ClassDeclarations: ClassDeclaration ClassDeclarations .

    $default  reduce using rule 6 (ClassDeclarations)


state 17

   10 Extension: EXTENDS . IDENTIFIER

    IDENTIFIER  shift, and go to state 21


state 18

   48 CompoundName: CompoundName DOT . IDENTIFIER

    IDENTIFIER  shift, and go to state 22


state 19

    7 ClassDeclaration: CLASS CompoundName Extension . SEMICOLON ClassBody

    SEMICOLON  shift, and go to state 23


state 20

    8 ClassDeclaration: PUBLIC CLASS CompoundName . Extension SEMICOLON ClassBody
   48 CompoundName: CompoundName . DOT IDENTIFIER

    EXTENDS  shift, and go to state 17
    DOT      shift, and go to state 18

    $default  reduce using rule 9 (Extension)

    Extension  go to state 24


state 21

   10 Extension: EXTENDS IDENTIFIER .

    $default  reduce using rule 10 (Extension)


state 22

   48 CompoundName: CompoundName DOT IDENTIFIER .

    $default  reduce using rule 48 (CompoundName)


state 23

    7 ClassDeclaration: CLASS CompoundName Extension SEMICOLON . ClassBody

    LBRACE  shift, and go to state 25

    ClassBody  go to state 26


state 24

    8 ClassDeclaration: PUBLIC CLASS CompoundName Extension . SEMICOLON ClassBody

    SEMICOLON  shift, and go to state 27


state 25

   11 ClassBody: LBRACE . RBRACE
   12          | LBRACE . ClassMembers RBRACE

    PRIVATE  shift, and go to state 28
    PUBLIC   shift, and go to state 29
    RBRACE   shift, and go to state 30

    $default  reduce using rule 18 (Visibility)

    ClassMembers       go to state 31
    ClassMember        go to state 32
    FieldDeclaration   go to state 33
    Visibility         go to state 34
    MethodDeclaration  go to state 35


state 26

    7 ClassDeclaration: CLASS CompoundName Extension SEMICOLON ClassBody .

    $default  reduce using rule 7 (ClassDeclaration)


state 27

    8 ClassDeclaration: PUBLIC CLASS CompoundName Extension SEMICOLON . ClassBody

    LBRACE  shift, and go to state 25

    ClassBody  go to state 36


state 28

   19 Visibility: PRIVATE .

    $default  reduce using rule 19 (Visibility)


state 29

   20 Visibility: PUBLIC .

    $default  reduce using rule 20 (Visibility)


state 30

   11 ClassBody: LBRACE RBRACE .

    $default  reduce using rule 11 (ClassBody)


state 31

   12 ClassBody: LBRACE ClassMembers . RBRACE
   14 ClassMembers: ClassMembers . ClassMember

    PRIVATE  shift, and go to state 28
    PUBLIC   shift, and go to state 29
    RBRACE   shift, and go to state 37

    $default  reduce using rule 18 (Visibility)

    ClassMember        go to state 38
    FieldDeclaration   go to state 33
    Visibility         go to state 34
    MethodDeclaration  go to state 35


state 32

   13 ClassMembers: ClassMember .

    $default  reduce using rule 13 (ClassMembers)


state 33

   15 ClassMember: FieldDeclaration .

    $default  reduce using rule 15 (ClassMember)


state 34

   17 FieldDeclaration: Visibility . Staticness Type IDENTIFIER SEMICOLON
   23 MethodDeclaration: Visibility . Staticness MethodType IDENTIFIER Parameters Body

    STATIC  shift, and go to state 39

    $default  reduce using rule 21 (Staticness)

    Staticness  go to state 40


state 35

   16 ClassMember: MethodDeclaration .

    $default  reduce using rule 16 (ClassMember)


state 36

    8 ClassDeclaration: PUBLIC CLASS CompoundName Extension SEMICOLON ClassBody .

    $default  reduce using rule 8 (ClassDeclaration)


state 37

   12 ClassBody: LBRACE ClassMembers RBRACE .

    $default  reduce using rule 12 (ClassBody)


state 38

   14 ClassMembers: ClassMembers ClassMember .

    $default  reduce using rule 14 (ClassMembers)


state 39

   22 Staticness: STATIC .

    $default  reduce using rule 22 (Staticness)


state 40

   17 FieldDeclaration: Visibility Staticness . Type IDENTIFIER SEMICOLON
   23 MethodDeclaration: Visibility Staticness . MethodType IDENTIFIER Parameters Body

    IDENTIFIER  shift, and go to state 41
    VOID        shift, and go to state 42
    INT         shift, and go to state 43
    REAL        shift, and go to state 44

    MethodType  go to state 45
    Type        go to state 46


state 41

   88 Type: IDENTIFIER . ArrayTail

    LBRACKET  shift, and go to state 47

    $default  reduce using rule 89 (ArrayTail)

    ArrayTail  go to state 48


state 42

   30 MethodType: VOID .

    $default  reduce using rule 30 (MethodType)


state 43

   86 Type: INT . ArrayTail

    LBRACKET  shift, and go to state 47

    $default  reduce using rule 89 (ArrayTail)

    ArrayTail  go to state 49


state 44

   87 Type: REAL . ArrayTail

    LBRACKET  shift, and go to state 47

    $default  reduce using rule 89 (ArrayTail)

    ArrayTail  go to state 50


state 45

   23 MethodDeclaration: Visibility Staticness MethodType . IDENTIFIER Parameters Body

    IDENTIFIER  shift, and go to state 51


state 46

   17 FieldDeclaration: Visibility Staticness Type . IDENTIFIER SEMICOLON
   29 MethodType: Type .

    IDENTIFIER  shift, and go to state 52

    IDENTIFIER  [reduce using rule 29 (MethodType)]


state 47

   90 ArrayTail: LBRACKET . RBRACKET

    RBRACKET  shift, and go to state 53


state 48

   88 Type: IDENTIFIER ArrayTail .

    $default  reduce using rule 88 (Type)


state 49

   86 Type: INT ArrayTail .

    $default  reduce using rule 86 (Type)


state 50

   87 Type: REAL ArrayTail .

    $default  reduce using rule 87 (Type)


state 51

   23 MethodDeclaration: Visibility Staticness MethodType IDENTIFIER . Parameters Body

    LPAREN  shift, and go to state 54

    Parameters  go to state 55


state 52

   17 FieldDeclaration: Visibility Staticness Type IDENTIFIER . SEMICOLON

    SEMICOLON  shift, and go to state 56


state 53

   90 ArrayTail: LBRACKET RBRACKET .

    $default  reduce using rule 90 (ArrayTail)


state 54

   24 Parameters: LPAREN . RPAREN
   25           | LPAREN . ParameterList RPAREN

    IDENTIFIER  shift, and go to state 41
    INT         shift, and go to state 43
    REAL        shift, and go to state 44
    RPAREN      shift, and go to state 57

    ParameterList  go to state 58
    Parameter      go to state 59
    Type           go to state 60


state 55

   23 MethodDeclaration: Visibility Staticness MethodType IDENTIFIER Parameters . Body

    LBRACE  shift, and go to state 61

    Body  go to state 62


state 56

   17 FieldDeclaration: Visibility Staticness Type IDENTIFIER SEMICOLON .

    $default  reduce using rule 17 (FieldDeclaration)


state 57

   24 Parameters: LPAREN RPAREN .

    $default  reduce using rule 24 (Parameters)


state 58

   25 Parameters: LPAREN ParameterList . RPAREN
   27 ParameterList: ParameterList . COMMA Parameter

    RPAREN  shift, and go to state 63
    COMMA   shift, and go to state 64


state 59

   26 ParameterList: Parameter .

    $default  reduce using rule 26 (ParameterList)


state 60

   28 Parameter: Type . IDENTIFIER

    IDENTIFIER  shift, and go to state 65


state 61

   31 Body: LBRACE . LocalDeclarations Statements RBRACE

    IDENTIFIER  shift, and go to state 41
    INT         shift, and go to state 43
    REAL        shift, and go to state 44

    LocalDeclarations  go to state 66
    LocalDeclaration   go to state 67
    Type               go to state 68


state 62

   23 MethodDeclaration: Visibility Staticness MethodType IDENTIFIER Parameters Body .

    $default  reduce using rule 23 (MethodDeclaration)


state 63

   25 Parameters: LPAREN ParameterList RPAREN .

    $default  reduce using rule 25 (Parameters)


state 64

   27 ParameterList: ParameterList COMMA . Parameter

    IDENTIFIER  shift, and go to state 41
    INT         shift, and go to state 43
    REAL        shift, and go to state 44

    Parameter  go to state 69
    Type       go to state 60


state 65

   28 Parameter: Type IDENTIFIER .

    $default  reduce using rule 28 (Parameter)


state 66

   31 Body: LBRACE LocalDeclarations . Statements RBRACE
   33 LocalDeclarations: LocalDeclarations . LocalDeclaration

    IDENTIFIER  shift, and go to state 70
    IF          shift, and go to state 71
    WHILE       shift, and go to state 72
    RETURN      shift, and go to state 73
    PRINT       shift, and go to state 74
    INT         shift, and go to state 43
    REAL        shift, and go to state 44
    LBRACE      shift, and go to state 75

    LocalDeclaration  go to state 76
    Statements        go to state 77
    Statement         go to state 78
    Assignment        go to state 79
    LeftPart          go to state 80
    CompoundName      go to state 81
    IfStatement       go to state 82
    WhileStatement    go to state 83
    ReturnStatement   go to state 84
    CallStatement     go to state 85
    PrintStatement    go to state 86
    Block             go to state 87
    Type              go to state 68


state 67

   32 LocalDeclarations: LocalDeclaration .

    $default  reduce using rule 32 (LocalDeclarations)


state 68

   34 LocalDeclaration: Type . IDENTIFIER SEMICOLON

    IDENTIFIER  shift, and go to state 88


state 69

   27 ParameterList: ParameterList COMMA Parameter .

    $default  reduce using rule 27 (ParameterList)


state 70

   47 CompoundName: IDENTIFIER .
   88 Type: IDENTIFIER . ArrayTail

    LBRACKET  shift, and go to state 47

    IDENTIFIER  reduce using rule 89 (ArrayTail)
    LBRACKET    [reduce using rule 47 (CompoundName)]
    $default    reduce using rule 47 (CompoundName)

    ArrayTail  go to state 48


state 71

   49 IfStatement: IF . LPAREN Relation RPAREN Statement
   50            | IF . LPAREN Relation RPAREN Statement ELSE Statement

    LPAREN  shift, and go to state 89


state 72

   51 WhileStatement: WHILE . Relation LOOP Statement SEMICOLON

    IDENTIFIER  shift, and go to state 13
    NUMBER      shift, and go to state 90
    NULL        shift, and go to state 91
    NEW         shift, and go to state 92
    PLUS        shift, and go to state 93
    MINUS       shift, and go to state 94

    LeftPart      go to state 95
    CompoundName  go to state 96
    Relation      go to state 97
    Expression    go to state 98
    AddSign       go to state 99
    Term          go to state 100
    Factor        go to state 101


state 73

   52 ReturnStatement: RETURN . SEMICOLON
   53                | RETURN . Expression SEMICOLON
